2003-02-28  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/submarine.c : added air and battery triggers, an alert is displayed 
  when some parameters reach some limits

2003-02-27  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/submarine.c : commited a new board, for debug and polish

2003-02-17  Pascal Georges <pascal.georges1@free.fr>
	* src/gcompris/gameutil.[ch] : added functions to rotate items (used by
  the submarine board, which will be avalaible soon)
  * commited different files for submarine board, just for my own backup

2003-02-22  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Catalan (ca) file

2003-02-17  Pascal Georges <pascal.georges1@free.fr>
	* src/boards/menu.c : if difficulty > 3 then display red stars instead of yellow ones

2003-02-17  Bruno Coudoin  <bruno.coudoin@free.fr>

	* Makefile.am: re-added gcompris.spec instead of .spec.in
	* configure.in: Release 2.3
	* gcompris.spec.in: added requires gnuchess 5.04
	* src/boards/chess.c: (chess_create_item): fixed castling issue

2003-02-17  bruno  <bruno.coudoin@free.fr>

	* boards/skins/*: Created the skins directory with images from boards/gcompris
	* src/boards/advanced_colors.c: (item_event): added support for skins
	* src/boards/algebra.c: (display_operand): added support for skins
	* src/boards/chess.c: (chess_next_level): added support for skins
	* src/boards/click_on_letter.c: (start_board),
	(click_on_letter_create_item), (highlight_selected): added support for skins
	* src/boards/clickgame.c: (clickgame_start): added support for skins
	* src/boards/imageid.c: (imageid_create_item): added support for skins
	* src/boards/machpuzzle.c: (machpuzzle_next_level): added support for skins
	* src/boards/maze.c: (start_board), (twoDdisplay): added support for skins
	* src/boards/menu.c: (menu_start), (menu_create_item): added support for skins
	* src/boards/reading.c: (start_board), (ask_ready), (ask_yes_no): added support for skins